--- a/client/project-three-peapod/package.json
+++ b/client/project-three-peapod/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
